# task-tracker

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
task_manager/: settings.py
task_manager/api/: __init__.py  tasks.py  users.py
task_manager/db/: middleware.py  tables.py
task_manager/models/: base.py  tasks.py  users.py
task_manager/services/: tasks.py
