[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Maltsev Nikita <maltsew.na@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.15"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
envparse = "^0.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
